kubernetes/apps/quant-engine-dev/messaging-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quant-engine-dev-messaging-service
  namespace: quant-engine-mt5
  labels:
    app.kubernetes.io/name: quant-engine-dev-messaging
    app.kubernetes.io/part-of: quant-engine
    environment: dev
spec:
  selector:
    app.kubernetes.io/name: quant-engine-dev-messaging
  ports:
    - name: http
      port: 8003
      targetPort: http
